--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "crypto-js": "^3.1.9-1",
+    "element-ui": "^2.4.5",
+    "fuse.js": "^3.4.6",
+    "js-cookie": "^2.2.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue2-svg-icon": "^1.3.2",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -30,6 +37,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
